tests/integration/pilot/testdata/traffic-mirroring-external-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-service
spec:
  hosts:
    - {{.MirrorHost}}
  location: MESH_EXTERNAL
  ports:
    - name: http
      number: 80
      protocol: HTTP
    - name: grpc
      number: 7070
      protocol: GRPC
  resolution: STATIC
  endpoints:
    - address: {{.MirrorAddress}}
---
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: restrict-to-service-entry
spec:
  egress:
    - hosts:
        - "./{{.TargetHost}}.{{.Namespace}}.svc.{{.Domain}}"
        - "*/{{.MirrorHost}}"
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
