tests/integration/pilot/testdata/traffic-mirroring-template.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: {{.Name}}
spec:
  hosts:
    - b
  http:
    - route:
        - destination:
            host: b
      mirror:
        host: {{.MirrorHost}}
  { { - if not .Absent } }
mirrorPercentage:
  value: {{.Percent}}
  { { - end } }
