tests/integration/pilot/testdata/traffic-shifting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: {{.Name}}
  namespace: {{.Namespace}}
spec:
  hosts:
    - {{.TargetHost}}
  http:
    - route:{{ range $i,$h := .Hosts }}
        - destination:
            host: {{$h}}
          weight: {{ index $.Weights $i }}{{ end }}
